# STR

./: .gitignore  CMakeLists.txt  Makefile  README.md  STR  build.zsh  premake5.lua
shaders/: camera.frag  camera.vert  shader.frag  shader.vert  viewport.frag  viewport.vert
spv/: shader.frag.spv  shader.vert.spv  viewport.frag.spv  viewport.vert.spv
src/: Makefile  camera.cpp  engine.cpp  graphics.cpp  intersections.cpp  main.cpp  material.cpp  renderer.cpp  transform.cpp  vertex.cpp
src/include/: camera.hpp  engine.hpp  graphics.hpp  intersections.hpp  linalg.hpp  linalg_decl.hpp  linalg_templates.hpp  material.hpp  material_templates.hpp  renderer.hpp  transform.hpp  vertex.hpp
